--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "eslint-config-airbnb-base": "^11.3.2",
     "eslint-plugin-import": "^2.7.0",
     "html-webpack-plugin": "^2.30.1",
+    "pug": "^2.0.0-rc.3",
+    "pug-loader": "^2.3.0",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
   },
