--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Viktor Yakubiv (www.yakubiv.com)",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server --inline --hot --open"
+    "start": "webpack-dev-server --inline --hot",
+    "build": "export NODE_ENV=production && webpack"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -15,12 +16,18 @@
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
+    "css-loader": "^0.28.7",
     "eslint": "^4.5.0",
     "eslint-config-airbnb-base": "^11.3.2",
     "eslint-plugin-import": "^2.7.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
     "pug": "^2.0.0-rc.3",
     "pug-loader": "^2.3.0",
+    "style-loader": "^0.18.2",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
   },
